--- a/alphaproject/angular.json
+++ b/alphaproject/angular.json
@@ -52,7 +52,9 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/js/bootstrap.bundle.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -119,5 +121,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "23933679-f7df-4b87-b4ce-9d20d90ea954"
   }
 }
